compiler/testData/diagnostics/tests/companionObjectInEnumAccess.diag.txt
/companionObjectInEnumAccess.kt:9:17: error: variable 'staticValue' must be initialized
        println(staticValue)
                ^^^^^^^^^^^
